<resources>
    <string name="app_name">Znote</string>

    <!-- Switch_button_01 -->
    <string name="style_default">Default Style</string>
    <string name="style_text">With Status Text</string>
    <string name="style_nofade">Default Style without background fade effect.</string>
    <string name="style_tint_color">Custom by tint color</string>
    <string name="style_custom">Custom Style</string>
    <string name="style_flyme">Flyme5 Style</string>
    <string name="style_miui">MIUI7 Style</string>
    <string name="style_md_ios">Material Design &#038; iOS Style</string>
    <string name="style_disable">Disable state</string>
    <string name="style_disable_opt">Toggle the others\' enable state</string>
    <string name="enable_title">enable/disable other SwitchButtons</string>

    <!--layout_view_10-->
    <string name="action_settings">Settings</string>
    <string name="screen_size_label">Screen Size</string>
    <string name="screen_size_width">Width (inch):</string>
    <string name="screen_size_height">Height (inch):</string>
    <string name="resolution_label">Resolution:</string>
    <string name="resolution_width">Width (px):</string>
    <string name="resolution_height">Height (px):</string>
    <string name="dpi_label">DPI (Dot Per Inch)</string>
    <string name="dpi_width">Width:</string>
    <string name="dpi_height">Height:</string>
    <string name="density_dpi">Density Dpi:</string>
    <string name="density_label">Density (Resolution / Screen Size)</string>
    <string name="density">Density:</string>
    <string name="dip_label">dip/dp (Density independent pixel):</string>
    <string name="dip_width">Width (dp):</string>
    <string name="dip_height">Height (dp):</string>
    <string name="suggestion_label">Suggestion</string>
    <string name="suggestion_layout">Layout:</string>
    <string name="suggestion_layout_land">Layout Land:</string>
    <string name="suggestion_values">Values:</string>
    <string name="suggestion_values_land">Values Land:</string>
    <string name="screen_size">ScreenSize(inch):</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>

    <!--widget.AboutDialog-->
    <string name="about_body">
        <![CDATA[
            <b>Show/Hide Toolbar Sample</b><br/>
            Version %s<br/>
            Developed by Randy Saborio<br/><br/>
            <a href="https://github.com/rylexr">Github</a><br/><br/>
            <a href="https://rylexr.tinbytes.com">Blog</a>
        ]]>
    </string>

    <string name="about_msg">
        这是一款Material Design风格的新闻阅读App，采用MVP模式，基于Dagger2+RxJava+Retrofit2进行开发。
        \n新闻模块数据来源于网易，图片模块数据来源于干货集中营。

        \n\n项目源码：https://github.com/kaku2015/ColorfulNews

        \n\n主要用到的开源库：Dagger2、RxJava、Retrofit2、Butterknife、Greendao、PhotoView、Glide、Picasso…

        \n\n作者：咖枯

        \n\nGitHub：https://github.com/kaku2015

        \n\n简书：http://www.jianshu.com/users/dc68e267ea1c/latest_articles

        \n\nCSDN：http://blog.csdn.net/kaku2013

        \n\nEmail：kaku201313@163.com
    </string>


    <string name="setting">设置</string>
    <string name="emoj">表情</string>

    <string name="setting_cache">自动缓存</string>
    <string name="setting_image">无图模式</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_normal">常规</string>
    <string name="setting_other">其他</string>

    <string name="txt_how_add_show_way">如何添加桌面小控件</string>
    <string name="txt_why_add_widget">为了更好的使用UPMiss，在桌面添加她的小部件吧！\n这样随时很醒目的就能看到她哦。</string>
    <string name="txt_add_widget_first">首先要找到小部件在哪儿，如图：长按桌面，然后点击 添加插件 ,就可以找到她了。</string>
    <string name="txt_add_widget_second">找到了么？接下来长按UPMiss小部件拉到桌面就OK啦~</string>
    <string name="txt_other_add_widget">添加小部件的方式均大同小异，\n如果没有找到的话，可以求助度娘哈！</string>


    <string name="txt_about_version">Version: 3.0.0</string>
    <string name="txt_about_email">Email: qiujuer@live.cn</string>
    <string name="txt_about_group">QQGroup: 387403637</string>
    <string name="txt_about_alipay">AliPay: qiujuer</string>
    <string name="txt_about_wechat">WeChat: qiujuerman</string>


    <string name="AboutFragment_label_nickname">小新丶很红</string>
    <string name="AboutFragment_desc_introduction">深圳大学，Android 开发</string>
    <string name="AboutFragment_label_grade">评分</string>
    <string name="AboutFragment_label_contact_me">联系我</string>
    <string name="AboutFragment_label_help">帮助</string>
    <string name="AboutFragment_label_setting">设置</string>
    <string name="AboutFragment_label_check_update">检查更新</string>
</resources>
