<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey100"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:scrollbars="none"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="32dp">

        <TextView
            fontPath="fonts/FZLanTingHeiS-DB1-GB-Regular.TTF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:text="@string/txt_how_add_show_way"
            android:textColor="#00bcd4"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/txt_why_add_widget"
            android:textColor="@color/grey700"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/txt_add_widget_first"
                android:textColor="@color/grey700"/>

            <ImageView
                android:layout_width="180dp"
                android:layout_height="240dp"
                android:contentDescription="null"
                android:src="@drawable/ic_help_find_widgets_1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="8dp">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="240dp"
                android:contentDescription="null"
                android:src="@drawable/ic_help_find_widgets_2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/txt_add_widget_second"
                android:textColor="@color/grey700"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/txt_other_add_widget"
            android:textColor="@color/grey700"/>
    </LinearLayout>
</ScrollView>

