<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lay_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_blue_500"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <!--这是actionbar-->
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            app:navigationIcon="@drawable/vector_close"/>

        <ImageView
            android:id="@+id/launch_icon"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:contentDescription="Null"
            android:src="@drawable/ic_launcher_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:text="一款记录您重要日子的软件；您的时间秘书~~"
            android:textColor="@color/material_white95"
            android:textSize="14sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lay_top"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:paddingBottom="32dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="32dp">

        <TextView
            style="@style/TextAboutSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_about_version"/>

        <TextView
            style="@style/TextAboutSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_about_email"/>

        <TextView
            style="@style/TextAboutSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_about_group"/>

        <TextView
            style="@style/TextAboutSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_about_alipay"/>

        <TextView
            style="@style/TextAboutSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_about_wechat"/>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_github"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lay_top"
        android:layout_gravity="right"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-22dp"
        android:padding="8dp"
        android:src="@drawable/vector_ic_help_24dp"
        app:backgroundTint="@color/material_blue_500"/>
</RelativeLayout>
