<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_card">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:src="@drawable/q2"/>

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/iv_avatar"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/iv_avatar"
            android:layout_toRightOf="@id/iv_avatar"
            android:text="@string/AboutFragment_label_nickname"
            android:textColor="#333333"
            android:textSize="16sp"
            tools:ignore="HardcodedText"/>

        <TextView
            android:id="@+id/tv_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_avatar"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@id/iv_avatar"
            android:layout_toRightOf="@id/iv_avatar"
            android:text="@string/AboutFragment_desc_introduction"
            android:textSize="12sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_card"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:id="@+id/grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/bottom_line"
            android:clickable="true">

            <TextView
                android:id="@+id/tv_grade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="10"
                android:text="@string/AboutFragment_label_grade"
                android:textColor="#333333"
                android:textSize="16sp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_right"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line"
            android:clickable="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="10"
                android:text="@string/AboutFragment_label_contact_me"
                android:textColor="#333333"
                android:textSize="16sp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_right"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line"
            android:clickable="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="10"
                android:text="@string/AboutFragment_label_help"
                android:textColor="#333333"
                android:textSize="16sp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_right"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_line"
            android:clickable="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="10"
                android:text="@string/AboutFragment_label_setting"
                android:textColor="#333333"
                android:textSize="16sp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_right"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/check_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="10"
                android:text="@string/AboutFragment_label_check_update"
                android:textColor="#333333"
                android:textSize="16sp"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_right"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>